--- a/holo-light-widgets.css
+++ b/holo-light-widgets.css
@@ -6,10 +6,3 @@
 footer.actionBar {
 	border-top-color:#B1B1B1;
 }
-
-.actionBar button:focus {
-	background-color:rgba(51,181,229,0.3);
-	
-	outline-color:#32A5CF;
-	outline-color:rgba(51,181,229,0.9);
-}
